fix: sub table overflow

--- a/packages/app/src/components/views/Field/style.less
+++ b/packages/app/src/components/views/Field/style.less
@@ -13,3 +13,11 @@
     text-align: right;
   }
 }
+
+.sub-table-field {
+  overflow: auto;
+  > .ant-table-wrapper {
+    width: 1px;
+    overflow: visible;
+  }
+}
